# startcloudsai

./: .env.development.example  .env.example  .gitignore  .gitleaks.toml  README.md  docker-compose.yml
apps/server/: .dockerignore  .gitignore  Dockerfile  README.md  go.mod  go.sum  pyproject.toml
apps/server/alembic/: env.py
apps/server/alembic/versions/: 0001_initial_schema.py  0002_seed_app_settings.py
apps/server/app/: cli.py  config.py  db.py  deps.py  errors.py  main.py  models.py  pagination.py  schemas.py  serializers.py  worker.py
apps/server/app/routers/: admin.py  auth.py  files.py  gallery.py  me.py  meta.py  orders.py  plans.py  tasks.py  uploads.py
apps/server/app/services/: c2a_client.py  order_service.py  prompt_compiler.py  queue.py  security.py  settings_service.py  storage.py  task_runner.py  task_service.py  wallet.py
apps/server/migrations/: 00001_initial_schema.sql  00002_seed_app_settings.sql  00003_admin_audit_logs.sql  00004_community.sql  00005_prompt_sources.sql  00006_redemption_and_subscriptions.sql  00007_separate_admin_auth.sql  00008_auth_keys_thumbnails.sql  00009_email_auth_purpose.sql  00010_password_auth_reset.sql  00011_remove_admin_access_keys.sql  00012_task_model.sql  00013_user_profile_details.sql  00014_user_assets.sql  00015_gallery_submission_tags.sql  00016_prompt_library_performance.sql  00017_prompt_source_category_priority.sql  embed.go
apps/server/scripts/: backfill-prompt-categories.sql
apps/server/tests/: conftest.py  test_orders.py  test_prompt_compiler.py  test_tasks.py  test_wallet.py
(+667 files in other folders)
